# backend/internal/models/attempt.go
@@ -9,10 +9,11 @@ type Attempt struct {
 	InternID  uint      `gorm:"not null"`
 	TestID    uint      `gorm:"not null"`
 	StartTime time.Time `gorm:"not null"`
-	EndTime   time.Time
+	EndTime   *time.Time
 	Score     float64 `gorm:"default:0"`
 	Passed    bool    `gorm:"default:false"`
 	// Связи
-	User User `gorm:"foreignKey:InternID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
-	Test Test `gorm:"foreignKey:TestID;constraint:OnDelete:CASCADE;"`
+	User    User `gorm:"foreignKey:InternID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
+	Test    Test `gorm:"foreignKey:TestID;constraint:OnDelete:CASCADE;"`
+	Answers []Answer
 }
